adding form input

--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@
   /* height: 100px; */
   border: 1px solid black;
 }
+.start--button {
+
+}
+.reset--button {
+
+}
+.dimensions--form
+.width--input
+.height--input
